2005-07-20  William Jon McCann  <mccann@jhu.edu>

	* gui/greeter/themes/happygnome-list/happygnome.xml:
	Tweak the colors in the user list.  Make the background
	translucent behind the user list.

	* gui/greeter/greeter_item_ulist.c (greeter_populate_user_list):
	Make real name bold if it is available.  Design for humans.
	(force_no_tree_separators): Set treeview style so that we don't
	get strange lines between tree rows when we set a userlist
	color in the theme.
	(greeter_item_ulist_setup): Only shrink the size of the user
	list.  Set the default widget style.

	* gui/greeter/greeter_canvas_item.c (greeter_item_create_canvas_item):
	Don't set rules hint for userlist treeview.

2005-07-20  Brian Cameron  <Brian.Cameron@sun.com>

	* utils/gdm-dmx-reconnect-proxy.c: Fixed grammar,
	  fixing bug #310958.

2005-07-20  Brian Cameron  <Brian.Cameron@sun.com>

	* configure.in: TCP Wrappers now works on Solaris.

2005-07-20  Brian Cameron  <Brian.Cameron@sun.com>

	* gui/Makefile.am, gui/gdmcommon.c, gdmwm.c:
	  Moved gdm_common_show_info_msg, gdm_common_msg
	  and gdm_common_query from gdmcommon.c to gdmwm.c.
	  Now no longer include gdmwm.[ch] in libgdmcommon.a
	  since these are in libgdmwm.a:  This is cleaner
	  since these 3 functions reference gdmwm functions.
	  This fixes a link problem on Solaris caused because
	  the Xinerama functions were getting referenced in
	  gdmsetup even though they are unused.  
	* gui/gdmphotosetup.c: Now use chmod instead of 
	  g_chmod.

2005-07-19  Brian Cameron  <Brian.Cameron@sun.com>

	* gui/gdmphotosetup.c: Backed out calls to g_chmod since gdm2
	  should not depend on glib functions only available in an
	  unstable build (2.7).

2005-07-19  William Jon McCann  <mccann@jhu.edu>

	* gui/greeter/greeter_item_ulist.c (gdm_greeter_users_init): 
	Use common function for loading face images.
	
	* gui/greeter/greeter.c (greeter_ctrl_handler):
	Update for new common code.

	* gui/gdmuser.c (gdm_user_alloc): Use common function for