@@ -1,165 +1,0 @@
-/*
- * Translatable strings file generated by Glade.
- * Add this file to your project's POTFILES.in.
- * DO NOT compile it as part of your application.
- */
-
-gchar *s = N_("Login Screen Setup");
-gchar *s = N_("Greeter");
-gchar *s = N_("    ");
-gchar *s = N_("L_ocal: ");
-gchar *s = N_("_Remote: ");
-gchar *s = N_("_Welcome string: ");
-gchar *s = N_("Re_mote welcome string (%n = hostname): ");
-gchar *s = N_("String to be shown in the greeter as welcome.  You can insert %n in here and it will be replaced by the name of your computer.");
-gchar *s = N_("*");
-gchar *s = N_("String to be shown in the greeter for people logging in remotely with XDMCP.  You can insert %n in here and it will be replaced by the name of your computer.");
-gchar *s = N_("*");
-gchar *s = N_("Always use 24 hour cloc_k format");
-gchar *s = N_("GTK+ Greeter");
-gchar *s = N_("Themed Greeter");
-gchar *s = N_("GTK+ Greeter");
-gchar *s = N_("Themed Greeter");
-gchar *s = N_("Disabled");
-gchar *s = N_("Use default Welcome");
-gchar *s = N_("Use default Remote Welcome");
-gchar *s = N_("Automatic Login");
-gchar *s = N_("    ");
-gchar *s = N_("_Automatic login username:");
-gchar *s = N_("_Login a user automatically on first bootup");
-gchar *s = N_("dummy");
-gchar *s = N_("Timed Login");
-gchar *s = N_("    ");
-gchar *s = N_("_Timed login username:");
-gchar *s = N_("_Seconds before login:");
-gchar *s = N_("Login a _user automatically after a specified number of seconds");
-gchar *s = N_("dummy");
-gchar *s = N_("_1 General");
-gchar *s = N_("Logo");
-gchar *s = N_("    ");
-gchar *s = N_("Browse");
-gchar *s = N_("No Logo");
-gchar *s = N_("Background");
-gchar *s = N_("    ");
-gchar *s = N_("_No background");
-gchar *s = N_("_Image");
-gchar *s = N_("_Color");
-gchar *s = N_("_Scale background image to fit");
-gchar *s = N_("Browse");
-gchar *s = N_("_Only color on remote displays");
-gchar *s = N_("_Background color: ");
-gchar *s = N_("Pick a color");
-gchar *s = N_("_2 GTK+ Greeter");
-gchar *s = N_("_Mode:");
-gchar *s = N_("Only One Theme");
-gchar *s = N_("Random Theme");
-gchar *s = N_("Preview:");
-gchar *s = N_("No screenshot available");
-gchar *s = N_("Description:");
-gchar *s = N_("Copyright:");
-gchar *s = N_("Author:");
-gchar *s = N_("description\n"
-              "widget");
-gchar *s = N_("author");
-gchar *s = N_("copyright");
-gchar *s = N_("_Install new theme");
-gchar *s = N_("_Delete theme");
-gchar *s = N_("_3 Themed Greeter");
-gchar *s = N_("Options");
-gchar *s = N_("    ");
-gchar *s = N_("Enable _XDMCP");
-gchar *s = N_("Show choosable user images (_Face Browser)");
-gchar *s = N_("Enable debu_g messages to system log");
-gchar *s = N_("Allow _root to login with GDM");
-gchar *s = N_("Allow root to login r_emotely with GDM");
-gchar *s = N_("Allow remote _timed logins");
-gchar *s = N_("Show the \"Actions\" menu (formerly known as the \"System\" menu).  If not set, none of the system commands will be available (this includes restart, shutdown, configure, chooser)");
-gchar *s = N_("Show _actions menu");
-gchar *s = N_("    ");
-gchar *s = N_("Allow _configuration from the login screen");
-gchar *s = N_("    ");
-gchar *s = N_("Allow running _XDMCP chooser from the login screen");
-gchar *s = N_("Always _disallow TCP connections to X server (disables all remote connections)");
-gchar *s = N_("Retry delay (_seconds):");
-gchar *s = N_("_4 Security");
-gchar *s = N_("X Server Settings");
-gchar *s = N_("     ");
-gchar *s = N_("<b>WARNING:</b> Placing values in this section that your Xserver does not support will stop your Xserver\n"
-              "from restarting (effectively not allowing this configuration program to run), BE CAREFUL!");
-gchar *s = N_("     ");
-gchar *s = N_("Note: For settings to take effect, the gdm service will require a restart.");
-gchar *s = N_("Remove Server");
-gchar *s = N_("*");
-gchar *s = N_("Add/Modify Server");
-gchar *s = N_("<b>Servers to Start</b>");
-gchar *s = N_("Server Definition to Modify:");
-gchar *s = N_("Server Name:");
-gchar *s = N_("*");
-gchar *s = N_("Command:");
-gchar *s = N_("Usually something like: /usr/bin/X");
-gchar *s = N_("*");
-gchar *s = N_("Login Greeter.");
-gchar *s = N_("Greeter");
-gchar *s = N_("Choose network computer to connect to.");
-gchar *s = N_("Chooser");
-gchar *s = N_("Is a login attempt handled by this machine?");
-gchar *s = N_("Handled");
-gchar *s = N_("Flexible");
-gchar *s = N_("Resolution:");
-gchar *s = N_("Color Depth:");
-gchar *s = N_("Refresh Rate:");
-gchar *s = N_("<b>Server Settings</b>");
-gchar *s = N_("Delete Server Definition");
-gchar *s = N_("Create Server Definition");
-gchar *s = N_("_5 XServer");
-gchar *s = N_("Options");
-gchar *s = N_("    ");
-gchar *s = N_("Enable _accessibility modules");
-gchar *s = N_("Allow theme selection in _GTK+ Greeter.");
-gchar *s = N_("Make a _sound when login window is ready");
-gchar *s = N_("    ");
-gchar *s = N_("Sound file:");
-gchar *s = N_("Browse");
-gchar *s = N_("No Sound");
-gchar *s = N_("Test Sound");
-gchar *s = N_("Make a _sound after a successful login attempt");
-gchar *s = N_("    ");
-gchar *s = N_("Sound file:");
-gchar *s = N_("Browse");
-gchar *s = N_("No Sound");
-gchar *s = N_("Test Sound");
-gchar *s = N_("Make a _sound after a failed login attempt");
-gchar *s = N_("    ");
-gchar *s = N_("Sound file:");
-gchar *s = N_("Browse");
-gchar *s = N_("No Sound");
-gchar *s = N_("Test Sound");
-gchar *s = N_("_6 Accessibility");
-gchar *s = N_("No XDMCP support in the binary.  To enable XDMCP support you must recompile GDM with the XDMCP libraries.");
-gchar *s = N_("    ");
-gchar *s = N_("Honour _indirect requests");
-gchar *s = N_("Listen on _UDP port: ");
-gchar *s = N_("Maximum _pending requests:");
-gchar *s = N_("Max p_ending indirect requests:");
-gchar *s = N_("Maximum _remote sessions:");
-gchar *s = N_("Maximum _wait time:");
-gchar *s = N_("Maximum indirect w_ait time:");
-gchar *s = N_("Displays per _host:");
-gchar *s = N_("Pin_g interval (seconds):");
-gchar *s = N_("Ping interval (seconds):");
-gchar *s = N_("_7 XDMCP");
-gchar *s = N_("_Include All Users");
-gchar *s = N_("Include");
-gchar *s = N_("User to Include");
-gchar *s = N_("*");
-gchar *s = N_("_Add");
-gchar *s = N_("Delete");
-gchar *s = N_("<");
-gchar *s = N_(">");
-gchar *s = N_("Exclude");
-gchar *s = N_("User to exclude");
-gchar *s = N_("*");
-gchar *s = N_("_Add");
-gchar *s = N_("Delete");
-gchar *s = N_("Apply");
-gchar *s = N_("_8 Face Browser");
