@@ -1,9 +1,0 @@
-<?xml version="1.0" standalone="no"?> <!--*- mode: xml -*-->
-<!DOCTYPE glade-project SYSTEM "http://glade.gnome.org/glade-project-2.0.dtd">
-
-<glade-project>
-  <name>GDM Setup</name>
-  <program_name>gdm-setup</program_name>
-  <output_translatable_strings>TRUE</output_translatable_strings>
-  <translatable_strings_file>gdmsetup-strings.c</translatable_strings_file>
-</glade-project>
