@@ -1,3 +1,14 @@
+2005-07-21  William Jon McCann  <mccann@jhu.edu>
+
+	* daemon/verify-crypt.c, daemon/verify-pam.c,
+	  daemon/verify-shadow.c:  Remove unused
+	  gtkmessagedialog.h header file.
+	* gui/gdmchooser-strings.c, gui/gdmchooser.gladep,
+	  gui/gdmsetup-strings.c, gui/gdmsetup.gladep:
+	  Removing these files from the module since they
+	  are not needed.  The *.glade files are now
+	  translated directly.  This fixes bug #310857.
+
 2005-07-20  William Jon McCann  <mccann@jhu.edu>
 
 	* gui/greeter/themes/happygnome-list/happygnome.xml:
